# crawlPaper

./: .gitignore  CMakeLists.txt  READMD.md  README.md
config/: config.toml
include/config/: CrawlerConfig.h
include/model/: Paper.h
include/network/: AsyncHttpClient.h  CurlWrapper.h  HttpClient.h
include/parser/: ArxivParser.h  BiorxivParser.h  ChemRxivParser.h  PaperParser.h
include/scheduler/: CoroutineScheduler.h  ProcessScheduler.h  Scheduler.h  ThreadScheduler.h
include/storage/: DataStorage.h
src/: main.cpp
src/config/: CrawlerConfig.cpp
src/network/: AsyncHttpClient.cpp  CurlWrapper.cpp  HttpClient.cpp
src/parser/: ArxivParser.cpp  BiorxivParser.cpp  ChemRxivParser.cpp  PaperParser.cpp
src/scheduler/: CoroutineScheduler.cpp  ProcessScheduler.cpp  Scheduler.cpp  ThreadScheduler.cpp
src/storage/: DataStorage.cpp
